added mem params